--- a/search/static/css/results-page-style.css
+++ b/search/static/css/results-page-style.css
@@ -1,8 +1,8 @@
 /* Style of site's main part */
 
 main {
-    min-height: 908px;
     background: linear-gradient(to bottom, #3288ed, #78c6ff);
+    min-height: 908px;
     padding-top: 60px;
 }
 
@@ -17,6 +17,7 @@ main {
     text-align: center;
     display: block;
     margin-top: 3px;
+    margin-left: 10px;
     width: 110px;
     height: 58px;
     float: left;
@@ -30,11 +31,11 @@ main {
     float: left;
     display: block;
     margin-top: 14px;
+    margin-left: 10px;
     width: 500px;
     height: 30px;
     font-size: 20px;
     border-color: aliceblue;
-    transition: 0.2s ease-in-out;
 }
 
 #search:hover {
@@ -58,7 +59,6 @@ main {
     border-color: #1d74db;
     /*color: rgb(255, 255, 255);*/
     color: rgba(255, 255, 255, 0.59);
-    transition: 0.2s ease-in-out;
 }
 
 #button-search:hover {
@@ -68,4 +68,34 @@ main {
     border-color: #1563bf;
     color: rgb(255, 255, 255);
     transition: 0.2s ease-in-out;
+}
+
+.search-result {
+    font-family: 'Raleway', serif;
+    margin-left: 130px;
+    margin-bottom: 35px;
+}
+
+.search-result p {
+    margin-bottom: 5px;
+}
+
+.search-result h3 {
+    margin-bottom: 5px;
+    font-size: 20px;
+}
+
+.search-result h3 a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.search-result h3 a:hover {
+    text-decoration: underline;
+    transition: 0.1s ease-in-out;
+}
+
+.search-result h3 a:visited {
+    text-decoration: underline;
+    color: #d0d0d0;
 }
