Added page for indexed urls

--- a/search/templates/urls.html
+++ b/search/templates/urls.html
@@ -2,10 +2,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Mapich</title>
+		<title>Settings - Mapich</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="{% static 'css/reset.css' %}">
-		<link rel="stylesheet" href="{% static 'css/main-page-style.css' %}">
+		<link rel="stylesheet" href="{% static 'css/urls-page-style.css' %}">
 		<link rel="stylesheet" href="{% static 'css/header-style.css' %}">
 		<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		<link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
@@ -22,13 +22,6 @@
 			</nav>
 		</header>
 		<main>
-		    <div class="logo">
-                <a href="index.html">
-                    <img width="442" height="235" src="{% static 'images/mapich.png' %}" alt="logo">
-                </a>
-			</div>
-            <input id="search" type="text" autofocus>
-			<input id="button-search" type="button" value="Search on Mapich" onclick="location.href='results.html'">
 		</main>
 	</body>
 </html>
