--- a/search/static/css/results-page-style.css
+++ b/search/static/css/results-page-style.css
@@ -7,7 +7,7 @@ main {
 }
 
 .search-panel {
-    /*background: #2a5e9d;*/
+    background: #2a5e9d;
     width: 100%;
     height: 64px;
     margin-bottom: 30px;
