--- a/search/templates/settings.html
+++ b/search/templates/settings.html
@@ -16,6 +16,7 @@
 			<nav class="navigation">
 				<ul>
 					<li><a href="index.html">Search</a></li>
+					<li><a href="urls.html">Urls</a></li>
 					<li><a href="settings.html">Settings</a></li>
 				</ul>
 			</nav>
