--- a/search/templates/results.html
+++ b/search/templates/results.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title><!-- Now have to be a search query --> - Search on Mapich</title>
+		<title>{{ query }} - Search on Mapich</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="{% static 'css/reset.css' %}">
 		<link rel="stylesheet" href="{% static 'css/results-page-style.css' %}">
