--- a/search/templates/settings.html
+++ b/search/templates/settings.html
@@ -15,9 +15,10 @@
 			<!-- Navigation panel -->
 			<nav class="navigation">
 				<ul>
-					<li><a href="index.html">Search</a></li>
+					<li><a href="base.html">Search</a></li>
 					<li><a href="urls.html">Urls</a></li>
 					<li><a href="settings.html">Settings</a></li>
+					<li><a href="index.html">Add to index</a></li>
 				</ul>
 			</nav>
 		</header>
