--- a/search/static/css/reset.css
+++ b/search/static/css/reset.css
@@ -1,3 +1,9 @@
+/*
+=============================================
+        HTML5 reset
+=============================================
+*/
+
 html, body, div, h1, h2, h4,
 h5, h6, p, ol, ul, li, 
 header, nav {
