--- a/search/templates/results.html
+++ b/search/templates/results.html
@@ -5,47 +5,48 @@
 		<title>{{ query }} - Search on Mapich</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="{% static 'css/reset.css' %}">
-		<link rel="stylesheet" href="{% static 'css/results-page-style.css' %}">
 		<link rel="stylesheet" href="{% static 'css/header-style.css' %}">
+		<link rel="stylesheet" href="{% static 'css/results-page-style.css' %}">
 		<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		<link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
 	</head>
 	<body>
-		<header>
-			<!-- Navigation panel -->
-			<nav class="navigation">
-				<ul>
-					<li><a href="base.html">Search</a></li>
-					<li><a href="urls.html">Urls</a></li>
-					<li><a href="settings.html">Settings</a></li>
-					<li><a href="index.html">Add to index</a></li>
-				</ul>
-			</nav>
-		</header>
-		<main>
+        <header>
+	    	<!-- Navigation panel -->
+		  	<nav class="navigation">
+		       	<ul>
+			    	<li><a href="base.html">Search</a></li>
+    		    	<li><a href="urls.html">Urls</a></li>
+	    			<li><a href="settings.html">Settings</a></li>
+		    		<li><a href="index.html">Add to index</a></li>
+			    </ul>
+            </nav>
+	   </header>
+       <main>
             <div class="search-panel">
-		        <div class="logo">
+	            <div class="logo">
                     <a href="base.html">
                         <img width="110" height="58" src="{% static 'images/mapich.png' %}" alt="logo">
                     </a>
-			    </div>
-                <input id="search" type="text" value="{{ query }}">
-			    <input id="button-search" type="button" value="Search" onclick="return search(event)">
+                </div>
+                <input id="search" type="text" value="{{ full_query }}">
+		    	<input id="button-search" type="button" value="Search" onclick="return search(event)">
             </div>
-			{% for result in results %}
-				<div class="search-result">
-				    <h3><a href="{{ result.site_link }}">{{ result.site_title }}</a></h3>
-				    <p>{{ result.site_link }}</p>
-				</div>
-			{% empty %}
-				<p id="not-found">Nothing found for "{{ query }}"...</p>
-			{% endfor %}
-		</main>
-		<script type="text/javascript">
+    		{% for result in results %}
+	    	    <div class="search-result">
+		    	    <h3><a href="{{ result.site_link }}">{{ result.site_title }}</a></h3>
+			        <p>{{ result.site_link }}</p>
+    			</div>
+	        {% empty %}
+	            <p id="not-found">Nothing found for "{{ cut_query }}"</p>
+            {% endfor %}
+       </main>
+       <script type="text/javascript">
 			function search(e) {
 				var query = document.getElementById("search").value;
 				window.location = "http://127.0.0.1:8000/results.html?request=" + query;
 			}
 		</script>
+		
 	</body>
 </html>
