--- a/search/templates/base.html
+++ b/search/templates/base.html
@@ -28,14 +28,20 @@
                     <img width="442" height="235" src="{% static 'images/mapich.png' %}" alt="logo">
                 </a>
 	    	</div>
-            <input id="search" type="text" autofocus>
-		   <input id="button-search" type="button" value="Search on Mapich" onclick="return search(event)">
+            <input id="search" type="text" onkeypress="return searchpress(event)" autofocus>
+		    <input id="button-search" type="button" value="Search on Mapich" onclick="return searchclick(event)">
     	</main>
 		<script type="text/javascript">
-			function search(e) {
+			function searchclick(e) {
 				var query = document.getElementById("search").value;
 				window.location = "http://127.0.0.1:8000/results.html?request=" + query;
-			}
+			};
+			function searchpress(e) {
+				if (e.keyCode == 13) {
+					var query = document.getElementById("search").value;
+					window.location = "http://127.0.0.1:8000/results.html?request=" + query;
+				}
+			};
 		</script>
 	</body>
 </html>
